<resources>
    <string name="app_name">Movies_List</string>
    <string name="genre">Action, Adventure, Drama</string>
    <string name="film_name">Название фильма</string>
    <string name="age">+18</string>
    <string name="movies_list">Movies list</string>
    <string name="actor_name">Chris Bartlett</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text_details">Storyline text details</string>
</resources>